; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_denali_dt.c_denali_dt_legacy_chip_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_denali_dt.c_denali_dt_legacy_chip_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.denali_controller = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }
%struct.denali_chip = type { i32, i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@sels = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.denali_controller*)* @denali_dt_legacy_chip_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @denali_dt_legacy_chip_init(%struct.denali_controller* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.denali_controller*, align 8
  %4 = alloca %struct.denali_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.denali_controller* %0, %struct.denali_controller** %3, align 8
  %7 = load %struct.denali_controller*, %struct.denali_controller** %3, align 8
  %8 = getelementptr inbounds %struct.denali_controller, %struct.denali_controller* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  store i32 %9, i32* %5, align 4
  %10 = load %struct.denali_controller*, %struct.denali_controller** %3, align 8
  %11 = getelementptr inbounds %struct.denali_controller, %struct.denali_controller* %10, i32 0, i32 1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = load %struct.denali_chip*, %struct.denali_chip** %4, align 8
  %14 = load i32, i32* @sels, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @struct_size(%struct.denali_chip* %13, i32 %14, i32 %15)
  %17 = load i32, i32* @GFP_KERNEL, align 4
  %18 = call %struct.denali_chip* @devm_kzalloc(%struct.TYPE_4__* %12, i32 %16, i32 %17)
  store %struct.denali_chip* %18, %struct.denali_chip** %4, align 8
  %19 = load %struct.denali_chip*, %struct.denali_chip** %4, align 8
  %20 = icmp ne %struct.denali_chip* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %1
  %22 = load i32, i32* @ENOMEM, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %2, align 4
  br label %56

24:                                               ; preds = %1
  %25 = load i32, i32* %5, align 4
  %26 = load %struct.denali_chip*, %struct.denali_chip** %4, align 8
  %27 = getelementptr inbounds %struct.denali_chip, %struct.denali_chip* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 8
  store i32 0, i32* %6, align 4
  br label %28

28:                                               ; preds = %41, %24
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %5, align 4
  %31 = icmp slt i32 %29, %30
  br i1 %31, label %32, label %44

32:                                               ; preds = %28
  %33 = load i32, i32* %6, align 4
  %34 = load %struct.denali_chip*, %struct.denali_chip** %4, align 8
  %35 = getelementptr inbounds %struct.denali_chip, %struct.denali_chip* %34, i32 0, i32 2
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %35, align 8
  %37 = load i32, i32* %6, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i64 %38
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  store i32 %33, i32* %40, align 4
  br label %41

41:                                               ; preds = %32
  %42 = load i32, i32* %6, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %6, align 4
  br label %28

44:                                               ; preds = %28
  %45 = load %struct.denali_chip*, %struct.denali_chip** %4, align 8
  %46 = getelementptr inbounds %struct.denali_chip, %struct.denali_chip* %45, i32 0, i32 1
  %47 = load %struct.denali_controller*, %struct.denali_controller** %3, align 8
  %48 = getelementptr inbounds %struct.denali_controller, %struct.denali_controller* %47, i32 0, i32 1
  %49 = load %struct.TYPE_4__*, %struct.TYPE_4__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @nand_set_flash_node(i32* %46, i32 %51)
  %53 = load %struct.denali_controller*, %struct.denali_controller** %3, align 8
  %54 = load %struct.denali_chip*, %struct.denali_chip** %4, align 8
  %55 = call i32 @denali_chip_init(%struct.denali_controller* %53, %struct.denali_chip* %54)
  store i32 %55, i32* %2, align 4
  br label %56

56:                                               ; preds = %44, %21
  %57 = load i32, i32* %2, align 4
  ret i32 %57
}

declare dso_local %struct.denali_chip* @devm_kzalloc(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @struct_size(%struct.denali_chip*, i32, i32) #1

declare dso_local i32 @nand_set_flash_node(i32*, i32) #1

declare dso_local i32 @denali_chip_init(%struct.denali_controller*, %struct.denali_chip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
